--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 #header-logo {
     font-size: 24px;
     color: #F9FAF8;
+    margin-left: -150px;
 }
 
 .header-link {
@@ -50,13 +51,40 @@ h1 {
 .content {
     display: flex;
     flex-direction: row;
+    margin: 50px;
 }
 
-.content-left,
 .content-right {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 50%;
 }
 
+.content-left {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    margin-left: 150px;
+}
+
+img {
+    margin-bottom: 50px;
+}
+
+.p-first {
+    font-size: 18px;
+    color: #E5E7EB;
+    
+}
+
+.sign-up-header {
+    background-color: #3882F6;
+    color: white;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    border: 1px #3882F6;
+}
